<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ifpr.androidapptemplate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/navigation_notifications"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ifpr.androidapptemplate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ifpr.androidapptemplate.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notifications_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ifpr.androidapptemplate.ui.usuario.PerfilUsuarioFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_perfil_usuario">
        <action
            android:id="@+id/action_profile_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>
</navigation>